--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
